:bug: 1차 수정